# ln2t_watchdog

./: .gitignore  README.md  install.sh  pyproject.toml  uninstall.sh
examples/: example_config.yaml
src/ln2t_watchdog/: __init__.py  __main__.py  cli.py  parser.py  runner.py  scanner.py  status.py
systemd/: ln2t-watchdog.service  ln2t-watchdog.timer
